--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <thrift.version>0.8.0</thrift.version>
     <hypertable.version>0.9.5.6</hypertable.version>
+    <scalaris.version>0.5.0</scalaris.version>
   </properties>
 
   <modules>
@@ -76,6 +77,7 @@
     <module>redis</module>
     <module>voldemort</module>
     <module>distribution</module>
+    <module>scalaris</module>
   </modules>
 
   <build>
